manifest/base/bhasai/uci-apis/deployment-uci-apis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:

  labels:
    app.kubernetes.io/name: uci-apis
  name: uci-apis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: uci-apis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uci-apis
    spec:
      containers:
        - envFrom:
          - secretRef:
              name: uci-apis
          image: ghcr.io/bharatsahaiyak/uci-apis:dev
          name: uci-apis
      restartPolicy: Always
