manifest/base/bhasai/uci-apis/ingress-uci-apis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uci-apis
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "uci-apis.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: uci-apis
            port:
              number: 80
